--- a/src/pages/scss/login.module.scss
+++ b/src/pages/scss/login.module.scss
@@ -15,6 +15,7 @@
       text-shadow: 4px 4px 3px rgba(0, 0, 0, 0.1);
     }
     .img-box {
+      text-align: center;
       img {
         width: 160px;
         height: 160px;
@@ -35,11 +36,11 @@
         color: #f6c0d7;
       }
     }
-    .box {
+    .boxlog {
       display: flex;
       flex-direction: column;
       justify-content: space-around;
-      padding: 40px 0;
+      //padding: 40px 0;
     }
     .login_pre {
       width: 449px;
